force-app/main/default/objects/SAJ_Analyze_Job_Assignment__c/SAJ_Analyze_Job_Assignment__c.object-meta.xml
<CustomObject>
    <label>Analyze Job Assignment</label>
    <nameField>
        <label>Analyze Job Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analyze Job Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>