force-app/main/default/objects/SAJ_Analyze_Job_Assignment__c/fields/SAJ_Analyze_Job__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Analyze_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analyze Job</label>
    <referenceTo>SAJ_Analyze_Job__c</referenceTo>
    <relationshipName>App_Analyze_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>