force-app/main/default/objects/SAJ_Analyze_Job_Assignment__c/fields/SAJ_App__c.field-meta.xml
<CustomField>
    <fullName>SAJ_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App</label>
    <referenceTo>SAJ_App__c</referenceTo>
    <relationshipName>App_Analyze_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>