force-app/main/default/objects/SAJ_Analyze_Job_Assignment__c/fields/SAJ_Cron__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Cron__c</fullName>
    <label>Cron</label>
    <length>100</length>
    <type>Text</type>
</CustomField>