force-app/main/default/objects/SAJ_Analyze_Job_Assignment__c/fields/SAJ_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>