force-app/main/default/objects/SAJ_Analyze_Job_Assignment__c/fields/SAJ_Parameter_1__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Parameter_1__c</fullName>
    <label>Parameter 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>